<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/clinical_notebook"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_note"
        android:id="@+id/btn_note"
        android:background="@drawable/circle_button"
        android:layout_margin="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_image"
        android:id="@+id/btn_image"
        android:background="@drawable/circle_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_voice"
        android:id="@+id/btn_voice"
        android:background="@drawable/circle_button"
        android:layout_margin="16dp"/>

</LinearLayout>