<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:id="@+id/layout_edit_info"
        android:visibility="visible"
        android:background="@drawable/border">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_name"
                    android:padding="4dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_file_name"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:layout_toEndOf="@id/tv_file_name"
                    android:id="@+id/edt_file_name"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/folder"
                    android:paddingLeft="4dp"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_folder"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_folder"
                    android:layout_centerVertical="true"
                    android:id="@+id/spinner_folder_test"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view_folder_name"
                android:visibility="visible">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/folder_name"
                    android:padding="4dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_folder_name"/>
                <ImageView
                    android:layout_margin="4dp"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_smaill_image"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorBlack"
                    android:layout_alignParentRight="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:layout_toStartOf="@id/iv_smaill_image"
                    android:layout_toEndOf="@id/tv_folder_name"
                    android:id="@+id/edt_folder_name"
                    />

            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:id="@+id/camera_preview"
                android:background="@color/colorAccent"
                />
            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/btn_record"
                    android:layout_marginLeft="8dp"
                    android:layout_width="@dimen/size_button"
                    android:layout_height="@dimen/size_button"
                    android:scaleType="centerCrop"
                    android:background="@drawable/ic_fiber_manual_record_green_24dp"
                    />
                <ImageView
                    android:id="@+id/btn_capture_auto"
                    android:layout_width="@dimen/size_button"
                    android:layout_height="@dimen/size_button"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/ic_video_cam_black_24dp"
                    />
                <ImageView
                    android:id="@+id/btn_capture"
                    android:layout_width="@dimen/size_button"
                    android:layout_height="@dimen/size_button"
                    android:layout_marginRight="8dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/ic_menu_camera"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            >
            <ImageView
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_pre_content"
                android:background="@drawable/ic_chevron_left_black_24dp"/>
            <TextView
                android:gravity="center"
                android:layout_width="50dp"
                android:id="@+id/tv_number_of_content"
                android:text="1/16"
                android:layout_margin="4dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next_content"
                android:background="@drawable/ic_chevron_right_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/edt_note_name"
                android:hint="@string/note_name"
                android:padding="4dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/size_button"
                android:layout_height="@dimen/size_button"
                android:id="@+id/btn_save_content"
                android:background="@drawable/ic_save_black_24dp"/>
            <ImageView
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="@dimen/size_button"
                android:layout_height="@dimen/size_button"
                android:id="@+id/btn_delete_content"
                android:background="@drawable/ic_delete_blue_24dp"/>
            <ImageView
                android:layout_width="@dimen/size_button"
                android:layout_height="@dimen/size_button"
                android:layout_marginEnd="8dp"
                android:id="@+id/btn_add_content"
                android:background="@drawable/ic_add_black_24dp"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edt_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="@drawable/border"
        android:hint="@string/text_here"
        android:gravity="top"
        android:inputType="textMultiLine"
        />
</LinearLayout>